--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-
+<div class="main">
 <div class="head">
     <h1 class="h1">Todo App</h1>
-<div  class="input"  onsubmit="myTodo(); return false">
-    <input id="todo" placeholder="..." type="text" required>
-    <button class="button" type="submit">Add</button>
+    <form class="input" onsubmit="addTodo(); return false">
+        <input id="todo" placeholder="..." type="text" required>    
+        <button class="button" type="submit">Add</button>
+    </form>
+    <div class="result">
+        <h3 id="result"> </h3>
+    </div>
 </div>
-<div class="result">
-    <h3 id="result"> </h3>
 </div>
-</div>
-
 <script>
 
-    function myTodo() {
+    function addTodo() {
+        console.log('abc');
         let todoT = document.querySelector("#todo").value
         axios.post(`https://lavender-cockatoo-coat.cyclic.app/todo`, {
             text: todoT
@@ -58,7 +59,8 @@
                 console.log(error);
             })
     }
-    setInterval(getAllTodos, 5000);
+    getAllTodos();
+    setInterval(getAllTodos, 3000);
 
 </script>
 </body>
