--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>todoApp</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/todofavicon-16x16.png" type="image/x-icon">
 
 </head>
 <div class="main">
