--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <div class="main">
 <div class="head">
-    <h1 class="h1">Todo App</h1>
+    <h1 class="h1">
+        <span>Todo App</span> </h1>
     <form class="input" onsubmit="addTodo(); return false">
         <input id="todo" placeholder="..." type="text" required>    
         <button class="button" type="submit">Add</button>
