--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="shortcut icon" href="/todofavicon-16x16.png" type="image/x-icon">
 
 </head>
-<div class="main">
+
 <div class="head">
+  <div class="container">
     <h1 class="h1">
         <span>Todo App...</span> </h1>
+  </div>  
     <form class="input" onsubmit="addTodo(); return false">
         <input id="todo" placeholder="..." type="text" required>    
         <button class="button" type="submit">Add</button>
@@ -23,7 +25,7 @@
         <h3 ><a href="" id="result"></a> </h3>
     </div>a
 </div>
-</div>
+
 <script>
 
     function addTodo() {
