--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
 </head>
 
 <div class="head">
-  <div class="container">
-    <h1 class="h1">
-        <span>Todo App...</span> </h1>
-  </div>  
+    <div class="container">
+        <h1 class="h1">
+            <span>Todo App...</span>
+        </h1>
+    </div>
     <form class="input" onsubmit="addTodo(); return false">
-        <input id="todo" placeholder="..." type="text" required>    
+        <input id="todo" placeholder="..." type="text" required>
         <button class="button" type="submit">Add</button>
     </form>
     <div class="result">
-        <h3 ><a href="" id="result"></a> </h3>
+        <h3><a href="" target="_blank" id="result"></a> </h3>
     </div>a
 </div>
 
