--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
     <div class="result">
         <h3><a href="" target="_blank" id="result"></a> </h3>
-    </div>a
+    </div>
 </div>
 
 <script>
@@ -46,7 +46,7 @@
             })
             .catch(function (error) {
                 console.log(error);
-            })
+            })                                                      
     }
 
     function getAllTodos() {
